src/test/resources/tokens/invalid/char_multiple_chars.unpick
unpick v3
const int
    0 = 'aa'